platform/observability/observability-config/ingressroute-prometheus-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-internal
  namespace: monitoring
spec:
  entryPoints:
    - websecure-internal
  routes:
    - match: Host(`prometheus.local.kagiso.me`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls: {}
